# FinHJB

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: docs-pages.yml  main.yml  python-publish.yml  test-installation.yml
.sphinx/: conf.py
.sphinx/_static/: language-switcher.css
.sphinx/_templates/: language-switcher.html  redirect.html
docs/: api-reference.md  getting-started.md  index.md  modeling-guide.md  solver-guide.md
docs/en/: adapting-bcw-to-your-model.md  api-reference.md  bcw2011-case-study.md  bcw2011-credit-line-walkthrough.md  bcw2011-hedging-walkthrough.md  bcw2011-liquidation-walkthrough.md  bcw2011-refinancing-walkthrough.md  faq.md  finhjb-model-coder-inputs-and-readiness.md  finhjb-model-coder-output-and-validation.md  finhjb-model-coder-overview.md  finhjb-model-coder.md  getting-started.md  index.md  installation-and-environment.md  modeling-guide.md  quickstart-library.md  results-and-diagnostics.md  solver-guide.md  troubleshooting.md
docs/zh/: adapting-bcw-to-your-model.md  api-reference.md  bcw2011-case-study.md  bcw2011-credit-line-walkthrough.md  bcw2011-hedging-walkthrough.md  bcw2011-liquidation-walkthrough.md  bcw2011-refinancing-walkthrough.md  faq.md  finhjb-model-coder-inputs-and-readiness.md  finhjb-model-coder-output-and-validation.md  finhjb-model-coder-overview.md  finhjb-model-coder.md  getting-started.md  index.md  installation-and-environment.md  modeling-guide.md  quickstart-library.md  results-and-diagnostics.md  solver-guide.md  troubleshooting.md
scripts/: install_skill.py
skills/finhjb-model-coder/: SKILL.md
skills/finhjb-model-coder/agents/: openai.yaml
skills/finhjb-model-coder/references/: clarification-checklist.md  delivery-and-validation.md  environment-readiness.md  implementation-decision-rules.md  math-to-finhjb-mapping.md  model-spec-schema.md  numerical-method-selection.md  output-contract.md  parameter-search-protocol.md  readiness-and-scope.md  template-selection.md  unsupported-models.md  validation-checklist.md
skills/finhjb-model-coder/scripts/: parameter_search_runner.py
skills/finhjb-model-coder/tests/: BCWrefinancing.py  BCWrefinancing_search_task.py  README.md  case_ii_refinancing_confirmed_spec.md  case_ii_refinancing_live_transcript.md  case_ii_refinancing_prompt.md  case_ii_refinancing_scripted_protocol.md
src/example/: A_unified_theory_of_tobin's_q,_corporate_investment,_financing,_and_risk_management.md  BCW2011CreditLine.py  BCW2011Hedging.py  BCW2011Liquidation.py  BCW2011Refinancing.py
src/example/bcw2011/: __init__.py  artifacts.py  boundaries.py  common.py  diagnostics.py  parameters.py  plotting.py
src/finhjb/: __init__.py  config.py  types.py
src/finhjb/algorithm/: __init__.py  boundary_search.py  boundary_update.py  continuation.py  evaluation.py  (+2 more)
tests/: conftest.py  helpers.py  test_algorithm_workflows.py  test_bcw_example_cases.py  test_config_and_grid.py  test_dependency_guard.py  test_doc_and_api_contracts.py  test_parameter_search_runner.py  test_skill_case_ii_refinancing.py  test_skill_integration.py  test_solver_preconditions.py  test_structure_and_interface.py
(+18 files in other folders)
