[project]
name = "finhjb"
version = "0.1.1"
description = "This is a Python library for solving Hamilton-Jacobi-Bellman (HJB) equations using JAX. It provides a framework for numerical solutions to dynamic optimization problems in finance and economics."
readme = "README.md"
authors = [
    { name = "Haotian Deng", email = "haotiandeng@stu.sufe.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "cloudpickle>=3.1.2",
    "flax>=0.12.4",
    "graphlib>=0.9.5",
    "jax>=0.9.1",
    "jaxopt>=0.8.5",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "optimistix>=0.1.0",
    "pandas>=3.0.1",
    "panel-print>=0.1.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "rich>=13.0.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.ruff.lint]
# 1. 启用排序规则 (I 代表 isort)
extend-select = ["I"]
# 2. 关键：将 F401 (未使用导入) 设为不可自动修复
unfixable = ["F401"]
