[project]
name = "finhjb"
version = "0.1.3"
description = "This is a Python library for solving Hamilton-Jacobi-Bellman (HJB) equations using JAX. It provides a framework for numerical solutions to dynamic optimization problems in finance and economics."
readme = "README.md"
authors = [
    { name = "Haotian Deng", email = "haotiandeng@stu.sufe.edu.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "cloudpickle",
    "flax",
    "graphlib",
    "jax",
    "jaxopt",
    "jaxtyping",
    "matplotlib",
    "optimistix",
    "orbax-checkpoint<0.11",
    "pandas",
    "panel-print",
    "pathlib",
    "pydantic",
    "rich",
    "tqdm",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.ruff.lint]
# 1. 启用排序规则 (I 代表 isort)
extend-select = ["I"]
# 2. 关键：将 F401 (未使用导入) 设为不可自动修复
unfixable = ["F401"]
