[project]
name = "finhjb"
version = "0.1.5"
description = "This is a Python library for solving Hamilton-Jacobi-Bellman (HJB) equations using JAX. It provides a framework for numerical solutions to dynamic optimization problems in finance and economics."
readme = "README.md"
authors = [
    { name = "Haotian Deng", email = "haotiandeng@stu.sufe.edu.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "cloudpickle",
    "flax",
    "jax",
    "jaxopt",
    "jaxtyping",
    "matplotlib",
    "optimistix",
    "orbax-checkpoint<0.11",
    "pandas",
    "panel-print",
    "pydantic",
    "rich",
    "tqdm",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
docs = [
    "myst-parser>=4.0.1,<5",
    "pydata-sphinx-theme>=0.16.1,<1",
    "sphinx>=7.4.7,<8",
]

[tool.ruff.lint]
# 1. 启用排序规则 (I 代表 isort)
extend-select = ["I"]
# 2. 关键：将 F401 (未使用导入) 设为不可自动修复
unfixable = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src/finhjb --cov-report=term-missing"
